Hopefully finished runtime download